Add MODEL_CAPABILITY_MODE to .env.docker template
Add the MODEL_CAPABILITY_MODE configuration option to the .env.docker template
file to provide users with clear documentation about model capability configuration.

This ensures users understand they can choose between:
- automatic: Tests each model to detect capabilities (slower, more accurate)
- custom: Uses predefined model capabilities (faster, no testing required)

The template defaults to 'automatic' which matches the code default, but users
can easily switch to 'custom' for faster startup without model testing.

--- a/.env.docker
+++ b/.env.docker
@@ -15,6 +15,14 @@ LOG_LEVEL=info
 NODE_ENV=production
 
 # ===================================
+# MODEL CAPABILITY CONFIGURATION
+# ===================================
+# Options: 'automatic' or 'custom'
+# - automatic: Tests each model to detect capabilities (slower, more accurate)
+# - custom: Uses predefined model capabilities (faster, no testing required)
+MODEL_CAPABILITY_MODE=automatic
+
+# ===================================
 # SAME-HOST DEPLOYMENT
 # ===================================
 # These are used when DEPLOYMENT_MODE=same-host
