Add cache-busting build args to same-host-existing-ollama deployment frontend service
- Added BUILD_DATE, GIT_COMMIT, and CACHE_BUST build arguments to frontend service
- Ensures fresh builds when source files change in subproject 2 (same-host with existing Ollama)
- Maintains consistency with docker-compose.prod.yml cache invalidation implementation

--- a/docker-compose.same-host-existing-ollama.yml
+++ b/docker-compose.same-host-existing-ollama.yml
@@ -8,6 +8,10 @@ services:
     build:
       context: .
       dockerfile: docker/frontend/Dockerfile
+      args:
+        BUILD_DATE: ${BUILD_DATE:-}
+        GIT_COMMIT: ${GIT_COMMIT:-}
+        CACHE_BUST: ${CACHE_BUST:-}
     container_name: olympian-frontend
     restart: unless-stopped
     ports:
