--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "socket.io-client": "^4.6.1",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.0"
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
