--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,7 +21,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@uiw/react-codemirror": "^4.21.21",
     "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-python": "^6.1.3",
+    "@codemirror/lang-html": "^6.4.6",
+    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-markdown": "^6.2.2",
+    "@codemirror/lang-xml": "^6.0.2",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@uiw/codemirror-extensions-langs": "^4.21.21",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
