--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.0.19",
     "socket.io-client": "^4.6.1",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.0"
