--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Minimal nginx configuration for Olympian AI frontend
+# Enhanced nginx configuration for Olympian AI multi-host deployment
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -6,6 +6,8 @@ pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 http {
@@ -33,10 +35,18 @@ http {
     # Disable nginx version in headers
     server_tokens off;
     
-    # Upstream backend with keepalive
+    # Map for WebSocket upgrade
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+    
+    # Upstream backend with keepalive and health check
     upstream backend {
         server backend:4000;
-        keepalive 8;
+        keepalive 32;
+        keepalive_requests 100;
+        keepalive_timeout 60s;
     }
     
     # Main server block
@@ -58,6 +68,43 @@ http {
             try_files $uri $uri/ /index.html;
             expires 1h;
             add_header Cache-Control "public, immutable";
+        }
+        
+        # SOCKET.IO WEBSOCKET & POLLING - Critical for real-time communication
+        location ~* ^/socket\.io/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            
+            # Essential WebSocket headers
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            
+            # Critical: Disable buffering for real-time WebSocket communication
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_request_buffering off;
+            
+            # Extended timeouts for streaming chat responses
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 3600s;    # 1 hour for long conversations
+            proxy_read_timeout 3600s;    # 1 hour for long conversations
+            
+            # WebSocket specific settings
+            proxy_redirect off;
+            proxy_set_header Access-Control-Allow-Origin *;
+            proxy_set_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+            proxy_set_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With";
+            proxy_set_header Access-Control-Allow-Credentials true;
+            
+            # Add headers for debugging
+            add_header X-Olympian-Proxy "websocket" always;
+            add_header X-Olympian-Backend "$upstream_addr" always;
         }
         
         # PROGRESSIVE LOADING API - Enhanced configuration for long-running model capability detection
@@ -146,27 +193,6 @@ http {
             proxy_request_buffering off;
         }
         
-        # WebSocket proxy
-        location /socket.io {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Extended timeouts for long-running sessions
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 600s;
-            proxy_read_timeout 600s;
-            
-            # WebSocket specific settings
-            proxy_buffering off;
-            proxy_cache off;
-        }
-        
         # Health check endpoint
         location /health {
             access_log off;
@@ -189,6 +215,13 @@ http {
             proxy_read_timeout 10s;
             
             access_log off;
+        }
+        
+        # WebSocket debug endpoint
+        location /debug/websocket {
+            access_log off;
+            return 200 "WebSocket proxy configuration active\nUpgrade: $http_upgrade\nConnection: $connection_upgrade\n";
+            add_header Content-Type text/plain;
         }
     }
 }
