Enhance nginx configuration for better WebSocket debugging
- Add separate WebSocket access log with enhanced format
- Include debugging headers for multi-host troubleshooting
- Add debug endpoints for connection diagnostics
- Improve CORS handling for preflight requests
- Add request ID tracking for better traceability

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -18,6 +18,13 @@ http {
                    '$status $body_bytes_sent "$http_referer" '
                    '"$http_user_agent" "$http_x_forwarded_for"';
     
+    # Enhanced log format for WebSocket debugging
+    log_format websocket '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for" '
+                        'upgrade="$http_upgrade" connection="$http_connection" '
+                        'backend="$upstream_addr" response_time="$upstream_response_time"';
+    
     access_log /var/log/nginx/access.log main;
     
     sendfile on;
@@ -72,6 +79,9 @@ http {
         
         # SOCKET.IO WEBSOCKET & POLLING - Critical for real-time communication
         location ~* ^/socket\.io/ {
+            # Use separate access log for WebSocket debugging
+            access_log /var/log/nginx/websocket.log websocket;
+            
             proxy_pass http://backend;
             proxy_http_version 1.1;
             
@@ -102,9 +112,23 @@ http {
             proxy_set_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With";
             proxy_set_header Access-Control-Allow-Credentials true;
             
-            # Add headers for debugging
+            # Enhanced headers for debugging and multi-host deployment
             add_header X-Olympian-Proxy "websocket" always;
             add_header X-Olympian-Backend "$upstream_addr" always;
+            add_header X-Olympian-Response-Time "$upstream_response_time" always;
+            add_header X-Olympian-Connection-Upgrade "$connection_upgrade" always;
+            add_header X-Olympian-Request-ID "$request_id" always;
+            
+            # Add CORS headers for preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin *;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With";
+                add_header Access-Control-Max-Age 86400;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
         }
         
         # PROGRESSIVE LOADING API - Enhanced configuration for long-running model capability detection
@@ -217,11 +241,40 @@ http {
             access_log off;
         }
         
-        # WebSocket debug endpoint
+        # WebSocket debug endpoint with enhanced diagnostics
         location /debug/websocket {
             access_log off;
-            return 200 "WebSocket proxy configuration active\nUpgrade: $http_upgrade\nConnection: $connection_upgrade\n";
+            return 200 "WebSocket proxy configuration active
+Upgrade Header: $http_upgrade
+Connection Header: $http_connection
+Connection Upgrade Mapping: $connection_upgrade
+Backend Server: backend:4000
+Request ID: $request_id
+Client IP: $remote_addr
+User Agent: $http_user_agent
+Timestamp: $time_iso8601
+";
             add_header Content-Type text/plain;
+            add_header X-Olympian-Debug "websocket-config" always;
+        }
+        
+        # New debug endpoint for connection testing
+        location /debug/connection {
+            access_log off;
+            return 200 "Connection Debug Info
+Server: $server_name
+Host: $host
+Remote Address: $remote_addr
+X-Forwarded-For: $http_x_forwarded_for
+X-Real-IP: $http_x_real_ip
+Protocol: $scheme
+Request URI: $request_uri
+HTTP Version: $server_protocol
+Request ID: $request_id
+Timestamp: $time_iso8601
+";
+            add_header Content-Type text/plain;
+            add_header X-Olympian-Debug "connection-info" always;
         }
     }
 }
