--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -42,11 +42,13 @@
     "react-resizable-panels": "^2.0.19",
     "socket.io-client": "^4.6.1",
     "tailwind-merge": "^2.2.1",
+    "uuid": "^9.0.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
