--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,17 +12,20 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
     "@olympian/shared": "^1.0.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "mongodb": "^6.3.0",
+    "redis": "^4.6.13",
     "socket.io": "^4.6.1",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
