Update .env.example with MongoDB replica set configuration for subproject 3
- Add detailed explanation of replica set requirement for multi-host deployment
- Clarify that replica sets are essential for transaction support and artifact functionality
- Provide multiple MongoDB URI examples for different scenarios
- Add section explaining why replica sets are critical for data consistency
- Include quick setup instructions for external MongoDB replica sets
- Distinguish configuration differences between subprojects 1&2 (standalone) vs 3 (replica set)

--- a/.env.example
+++ b/.env.example
@@ -24,17 +24,24 @@ CLIENT_URL=http://localhost:3000
 # ===================================
 # DATABASE CONFIGURATION
 # ===================================
-# Development: Local MongoDB
+# Development: Local MongoDB (standalone)
 MONGODB_URI=mongodb://localhost:27017/olympian_ai_lite
 
-# Docker same-host: Uses container name
+# Docker same-host: Uses container name (standalone)
 # MONGODB_URI=mongodb://olympian-mongodb:27017/olympian_ai_lite
 
-# Docker multi-host: External MongoDB
-# MONGODB_URI=mongodb://username:password@192.168.1.10:27017/olympian_ai_lite?authSource=admin
-
-# Optional: MongoDB Replica Set
-# MONGODB_REPLICA_SET=rs0
+# Docker multi-host: REPLICA SET ENABLED (required for transactions/artifacts)
+# The multi-host deployment automatically configures MongoDB as a single-node replica set
+# to support transactions. This is essential for artifact functionality.
+#
+# Option 1: Use containerized MongoDB with replica set (recommended)
+# MONGODB_URI=mongodb://mongodb:27017/olympian_ai_lite?replicaSet=rs0
+#
+# Option 2: External MongoDB with replica set
+# MONGODB_URI=mongodb://username:password@192.168.1.10:27017/olympian_ai_lite?replicaSet=rs0&authSource=admin
+#
+# Option 3: External MongoDB cluster
+# MONGODB_URI=mongodb://username:password@mongodb1.example.com:27017,mongodb2.example.com:27017/olympian_ai_lite?replicaSet=production&authSource=admin
 
 # ===================================
 # OLLAMA CONFIGURATION
@@ -121,15 +128,44 @@ CHOKIDAR_USEPOLLING=false
 # ===================================
 # Uncomment and modify based on your deployment mode:
 
-# For Docker same-host deployment:
+# For Docker same-host deployment (subprojects 1 & 2):
 # DEPLOYMENT_MODE=docker-same-host
 # MONGODB_URI=mongodb://olympian-mongodb:27017/olympian_ai_lite
 # OLLAMA_HOST=http://olympian-ollama:11434
 
-# For Docker multi-host deployment:
+# For Docker multi-host deployment (subproject 3):
 # DEPLOYMENT_MODE=docker-multi-host
-# MONGODB_URI=mongodb://username:password@your-mongo-host:27017/olympian_ai_lite?authSource=admin
+# 
+# Using containerized MongoDB with replica set (recommended):
+# MONGODB_URI=mongodb://mongodb:27017/olympian_ai_lite?replicaSet=rs0
+# 
+# OR using external MongoDB:
+# MONGODB_URI=mongodb://username:password@your-mongo-host:27017/olympian_ai_lite?replicaSet=rs0&authSource=admin
+# 
+# Ollama configuration:
 # OLLAMA_HOST=http://your-ollama-host:11434
+# 
+# Additional services:
 # MCP_HOSTS=your-mcp-host-1:8080,your-mcp-host-2:8080
 # EXTRA_HOSTS=- "your-ollama-host:192.168.1.100"
 # MODEL_CAPABILITY_MODE=custom
+
+# ===================================
+# IMPORTANT NOTES FOR SUBPROJECT 3
+# ===================================
+# 
+# 🔥 CRITICAL: Multi-host deployment requires MongoDB replica set for transactions
+# 
+# Why replica sets are required:
+# - Artifact creation uses atomic transactions across multiple collections
+# - Ensures consistency between conversations and their artifacts
+# - Prevents data corruption when navigating to previous conversations
+# - MongoDB standalone does not support transactions
+# 
+# The docker-compose.prod.yml automatically configures a single-node replica set.
+# If using external MongoDB, ensure it's configured as a replica set.
+#
+# Quick replica set setup for external MongoDB:
+# 1. Start MongoDB with: mongod --replSet rs0
+# 2. Initialize: rs.initiate()
+# 3. Verify: rs.status()
