Update .env.example with new MCP and Redis configuration options for subproject 3
- Add MCP_ENABLED and MCP_OPTIONAL environment variables
- Add REDIS_URL and REDIS_OPTIONAL for multi-host coordination
- Include GITHUB_PERSONAL_ACCESS_TOKEN and NASA_API_KEY for MCP servers
- Document service reliability configuration and separation of concerns
- Provide clear examples for different deployment modes
- Explain the startup order and optional service fallbacks

--- a/.env.example
+++ b/.env.example
@@ -71,17 +71,46 @@ OLLAMA_LOAD_BALANCER=round-robin
 MODEL_CAPABILITY_MODE=automatic
 
 # ===================================
-# MCP SERVER CONFIGURATION
+# MULTI-HOST COORDINATION (Subproject 3)
 # ===================================
-# Enable MCP server discovery
+# Enable multi-host features (requires Redis for full functionality)
+ENABLE_MULTI_HOST=false
+
+# Redis configuration for multi-host coordination
+# REDIS_URL=redis://redis:6379
+# REDIS_URL=redis://username:password@redis-host:6379
+
+# Make Redis optional - server will start without Redis but with limited multi-host features
+REDIS_OPTIONAL=true
+
+# ===================================
+# MCP (Model Context Protocol) CONFIGURATION
+# ===================================
+# Enable/disable MCP services entirely
+MCP_ENABLED=true
+
+# Make MCP optional - server will start even if MCP services fail
+MCP_OPTIONAL=true
+
+# MCP server discovery
 MCP_DISCOVERY_ENABLED=true
 
 # Known MCP servers (comma-separated) - for multi-host deployments
 # MCP_HOSTS=192.168.1.20:8080,192.168.1.21:8080
 
+# Environment variables for MCP servers
+# GitHub MCP server
+# GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
+
+# NASA MCP server
+# NASA_API_KEY=your_nasa_api_key_here
+
 # ===================================
 # SERVICE DISCOVERY (Multi-host only)
 # ===================================
+# Enable service discovery
+SERVICE_DISCOVERY_ENABLED=true
+
 # Network subnet to scan for services
 SERVICE_DISCOVERY_SUBNET=192.168.1.0/24
 
@@ -132,9 +161,12 @@ CHOKIDAR_USEPOLLING=false
 # DEPLOYMENT_MODE=docker-same-host
 # MONGODB_URI=mongodb://olympian-mongodb:27017/olympian_ai_lite
 # OLLAMA_HOST=http://olympian-ollama:11434
+# MCP_ENABLED=true
+# MCP_OPTIONAL=true
 
 # For Docker multi-host deployment (subproject 3):
 # DEPLOYMENT_MODE=docker-multi-host
+# ENABLE_MULTI_HOST=true
 # 
 # Using containerized MongoDB with replica set (recommended):
 # MONGODB_URI=mongodb://mongodb:27017/olympian_ai_lite?replicaSet=rs0
@@ -145,10 +177,39 @@ CHOKIDAR_USEPOLLING=false
 # Ollama configuration:
 # OLLAMA_HOST=http://your-ollama-host:11434
 # 
+# Redis for multi-host coordination:
+# REDIS_URL=redis://redis:6379
+# REDIS_OPTIONAL=true
+#
+# MCP Configuration:
+# MCP_ENABLED=true
+# MCP_OPTIONAL=true
+# GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
+# NASA_API_KEY=your_nasa_api_key_here
+# 
 # Additional services:
 # MCP_HOSTS=your-mcp-host-1:8080,your-mcp-host-2:8080
 # EXTRA_HOSTS=- "your-ollama-host:192.168.1.100"
 # MODEL_CAPABILITY_MODE=custom
+
+# ===================================
+# SERVICE RELIABILITY CONFIGURATION
+# ===================================
+# 
+# The following settings control how the server handles optional service failures:
+#
+# Core Services (Required - server won't start if these fail):
+# - MongoDB database connection
+# - Ollama health check and model access
+# - Artifact collection initialization
+# - Progressive model loading
+#
+# Optional Services (Server will start even if these fail):
+# - Redis coordination (REDIS_OPTIONAL=true)
+# - MCP tool integration (MCP_OPTIONAL=true)
+# - Multi-host monitoring features
+#
+# This separation ensures that model access is never blocked by external service failures.
 
 # ===================================
 # IMPORTANT NOTES FOR SUBPROJECT 3
@@ -169,3 +230,17 @@ CHOKIDAR_USEPOLLING=false
 # 1. Start MongoDB with: mongod --replSet rs0
 # 2. Initialize: rs.initiate()
 # 3. Verify: rs.status()
+#
+# 🛠️ SEPARATION OF CONCERNS:
+#
+# This configuration supports the new separation of concerns where:
+# - Core AI model functionality NEVER depends on MCP or Redis
+# - MCP failures will not prevent model access
+# - Redis failures will not prevent single-instance operation
+# - Optional services enhance functionality but are not required
+#
+# Service startup order:
+# 1. Core services (Database, Ollama, Models) - MUST succeed
+# 2. Multi-host coordination (Redis) - Optional, falls back gracefully
+# 3. MCP tool integration - Optional, falls back gracefully
+# 4. WebSocket and API services - Depend on core services only
