--- a/.env.example
+++ b/.env.example
@@ -92,18 +92,49 @@ MCP_ENABLED=true
 # Make MCP optional - server will start even if MCP services fail
 MCP_OPTIONAL=true
 
+# MCP transport type (stdio, sse, streamable_http)
+MCP_TRANSPORT=sse
+
+# MCP configuration path
+MCP_CONFIG_PATH=/app/mcp-config.multihost.json
+
 # MCP server discovery
 MCP_DISCOVERY_ENABLED=true
 
 # Known MCP servers (comma-separated) - for multi-host deployments
 # MCP_HOSTS=192.168.1.20:8080,192.168.1.21:8080
 
-# Environment variables for MCP servers
+# ===================================
+# MCP SERVER AUTHENTICATION
+# ===================================
 # GitHub MCP server
-# GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
+# Required for GitHub repository access, issue management, and pull requests
+# Get token from: https://github.com/settings/tokens
+# Required scopes: repo, read:user, read:org
+GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
 
-# NASA MCP server
-# NASA_API_KEY=your_nasa_api_key_here
+# NASA MCP server  
+# Optional - if not provided, will use DEMO_KEY with limited functionality
+# Get key from: https://api.nasa.gov/
+NASA_API_KEY=DEMO_KEY
+
+# ===================================
+# MCP SERVER ENDPOINTS (Multi-host only)
+# ===================================
+# Configure these if your MCP servers are running on different ports
+# Default ports are automatically used if these are not specified
+
+# GitHub MCP server endpoint
+MCP_GITHUB_ENDPOINT=http://host.docker.internal:3001/sse
+
+# NASA MCP server endpoint  
+MCP_NASA_ENDPOINT=http://host.docker.internal:3002/sse
+
+# Metropolitan Museum MCP server endpoint
+MCP_METMUSEUM_ENDPOINT=http://host.docker.internal:3003/sse
+
+# Context7 MCP server endpoint
+MCP_CONTEXT7_ENDPOINT=http://host.docker.internal:3004/sse
 
 # ===================================
 # SERVICE DISCOVERY (Multi-host only)
@@ -181,11 +212,16 @@ CHOKIDAR_USEPOLLING=false
 # REDIS_URL=redis://redis:6379
 # REDIS_OPTIONAL=true
 #
-# MCP Configuration:
+# MCP Configuration for external servers:
 # MCP_ENABLED=true
 # MCP_OPTIONAL=true
+# MCP_TRANSPORT=sse
 # GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
 # NASA_API_KEY=your_nasa_api_key_here
+# MCP_GITHUB_ENDPOINT=http://host.docker.internal:3001/sse
+# MCP_NASA_ENDPOINT=http://host.docker.internal:3002/sse
+# MCP_METMUSEUM_ENDPOINT=http://host.docker.internal:3003/sse
+# MCP_CONTEXT7_ENDPOINT=http://host.docker.internal:3004/sse
 # 
 # Additional services:
 # MCP_HOSTS=your-mcp-host-1:8080,your-mcp-host-2:8080
@@ -244,3 +280,26 @@ CHOKIDAR_USEPOLLING=false
 # 2. Multi-host coordination (Redis) - Optional, falls back gracefully
 # 3. MCP tool integration - Optional, falls back gracefully
 # 4. WebSocket and API services - Depend on core services only
+
+# ===================================
+# MCP SERVER STARTUP COMMANDS (Reference)
+# ===================================
+# For running MCP servers on your host machine, use these commands:
+#
+# GitHub MCP Server (Port 3001):
+# npx -y @modelcontextprotocol/server-github --transport sse --port 3001
+# Environment: GITHUB_PERSONAL_ACCESS_TOKEN=your_token_here
+#
+# NASA MCP Server (Port 3002):
+# npx -y @programcomputer/nasa-mcp-server@latest --transport sse --port 3002
+# Environment: NASA_API_KEY=your_key_here (optional, defaults to DEMO_KEY)
+#
+# Met Museum MCP Server (Port 3003):
+# npx -y metmuseum-mcp --transport sse --port 3003
+#
+# Context7 MCP Server (Port 3004):
+# npx -y @upstash/context7-mcp --transport sse --port 3004
+#
+# Note: Some MCP servers may not support SSE transport natively.
+# In that case, you'll need to check their documentation for
+# HTTP/SSE support or use stdio transport with a proxy.
